<resources>
    <string name="app_name">ZOLO</string>

    <!--Login Screen-->
    <string name="lbl_log_in">Log In</string>
    <string name="lbl_register">REGISTER</string>
    <string name="lbl_forget_password">Forget Password ?</string>
    <string name="lb1_create_account">CREATE ACCOUNT</string>
    <string name="lbl_hint_password">PASSWORD</string>
    <string name="lb1_profile_edit">EDIT</string>
    <string name="lb1_profile_Update">Save and Update</string>

    <!--Registration Screen-->

    <string name="lbR_register">R e g i s t e r</string>
    <string name="msg_please_register_with_zolo_to_continue">Please register with zolo to continue</string>
    <string name="msg_please_enter_your_registered_email">Please enter your register email</string>
    <string name="lbl_your_number">YOUR NUMBER</string>
    <string name="lbl_your_email">YOUR EMAIL</string>
    <string name="lbl_your_name">YOUR NAME</string>
    <string name="lbl_set_password">SET PASSWORD</string>
    <string name="lbl_referral_code">REFERRAL CODE</string>
    <string name="lbl_reset_password">RESET PASSWORD</string>
    <string name="lbl_header_forgot_password">F o r g o t \nP a s s w or d</string>


    <string name="msg_error_phone_validation">Please Enter 10 Digit Phone Number</string>
    <string name="msg_error_email_validation">Please Enter Proper EmailID</string>
    <string name="msg_error_name_validation">Please Enter Proper Name</string>
    <string name="msg_error_password_validation">Password should contain Upper and lower Case, SpecialChar, Number</string>
    <string name="msg_error_user_already_exits">User Already Registered</string>
    <string name="msg_user_registration_success">User Registration Success</string>
    <string name="msg_user_not_available">Enter Registered EmailID</string>
    <string name="msg_user_available">User Already Registered</string>
    <string name="msg_user_password_valid">User Password Valid</string>
    <string name="msg_email_send">New Generated Password Send to Email </string>
    <string name="msg_email_fail">Email Fail</string>
    <string name="msg_user_password_invalid">User Password not Valid</string>
    <string name="msg_profile_update_fail">User Update Fail</string>

    <string name="sender_email_id">princ.prince@gmail.com</string>
    <string name="sender_email_password">Singh@123</string>

</resources>
