<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0 1"
            android:textColor="#50FFFFFF"
            android:textSize="96sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/lbl_header_forgot_password"
            android:textColor="@color/colorWhite"
            android:textSize="32sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/msg_please_enter_your_registered_email"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingEnd="42dp"
        android:paddingStart="42dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_email"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_your_email"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_forgot_password_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_check"
                    android:fontFamily="monospace"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/app_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorYellow"
            android:text="@string/lbl_reset_password"
            android:textColor="@color/colorBlack" />


    </LinearLayout>
</LinearLayout>