<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context="com.princekumar.zolo.ui.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="0 1"
                android:textColor="#50FFFFFF"
                android:textSize="96sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/lbR_register"
                android:textColor="@color/colorWhite"
                android:textSize="42sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_please_register_with_zolo_to_continue"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingEnd="42dp"
            android:paddingStart="42dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="@dimen/layout_height"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_phone"
                    android:visibility="visible" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_your_number"
                    android:paddingStart="16dp"
                    android:theme="@style/textInputLayoutStyle">


                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_reg_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:fontFamily="monospace"
                        android:inputType="phone"
                        android:textColor="@color/colorWhite" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/layout_width"
                    android:layout_height="@dimen/layout_height"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_email"
                    android:visibility="visible" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_your_email"
                    android:paddingStart="16dp"
                    android:theme="@style/textInputLayoutStyle">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_reg_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:drawableEnd="@drawable/ic_check"
                        android:fontFamily="monospace"
                        android:inputType="textEmailAddress"
                        android:paddingEnd="16dp"
                        android:textColor="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_action_name"
                    android:visibility="visible" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_your_name"
                    android:paddingStart="16dp"
                    android:theme="@style/textInputLayoutStyle">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_reg_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:fontFamily="monospace"
                        android:inputType="textCapSentences"
                        android:textColor="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_password"
                    android:visibility="visible" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_set_password"
                    android:paddingStart="16dp"
                    android:theme="@style/textInputLayoutStyle"
                    app:passwordToggleDrawable="@drawable/ic_eye"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_reg_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:fontFamily="monospace"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:visibility="visible"
                        />


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_action_name"
                    android:visibility="visible" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_referral_code"
                    android:paddingStart="16dp"
                    android:theme="@style/textInputLayoutStyle">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/et_reg_referral_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorWhite"
                        android:fontFamily="monospace"
                        android:inputType="text"
                        android:textColor="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_reg_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorYellow"
                android:text="@string/lbl_register"
                android:textColor="@color/colorBlack" />
            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/snackbarCoordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </LinearLayout>


</ScrollView>
