<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="0 1"
            android:textColor="#50FFFFFF"
            android:textSize="96sp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="E d i t \nP r o f i l e"
            android:textColor="@color/colorWhite"
            android:textSize="42sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Edit your details"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingEnd="42dp"
        android:paddingStart="42dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_email"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_your_email"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_profile_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:drawableEnd="@drawable/ic_check"
                    android:fontFamily="monospace"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="16dp"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/app_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_action_name"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_your_name"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_profile_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="monospace"
                    android:inputType="textCapSentences"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/app_name" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_phone"
                android:visibility="visible" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_your_number"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_profile_edit_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="monospace"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    tools:text="@string/app_name" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_profile_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="42dp"
        android:background="@color/colorYellow"
        android:text="@string/lb1_profile_Update"
        android:textColor="@color/colorBlack" />


</LinearLayout>



