<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:background="@drawable/image_sunset"
        android:contentDescription="@null" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5"
        android:background="@color/colorBlue"
        android:orientation="vertical"
        android:paddingEnd="48dp"
        android:paddingStart="48dp"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_phone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="PHONE NUMBER"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_login_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="monospace"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/colorWhite" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_hint_password"
                android:paddingStart="16dp"
                android:theme="@style/textInputLayoutStyle">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:fontFamily="monospace"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    tools:text="Hekkk" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:background="@color/colorYellow"
            android:text="@string/lbl_log_in"
            android:textColor="@color/colorBlack" />


        <Button
            android:id="@+id/btn_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:background="@drawable/shape_rectangle"
            android:gravity="center"
            android:text="@string/lbl_forget_password"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:background="@drawable/shape_rectangle"
            android:text="@string/lb1_create_account" />
        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/snackbarCoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>
